PO Print Trial 1

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -1,16 +1,16 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <appSettings>
-    <add key="CrystalImageCleaner-AutoStart" value="true"/>
-    <add key="CrystalImageCleaner-Sleep" value="60000"/>
-    <add key="CrystalImageCleaner-Age" value="120000"/>
+    <add key="CrystalImageCleaner-AutoStart" value="true" />
+    <add key="CrystalImageCleaner-Sleep" value="60000" />
+    <add key="CrystalImageCleaner-Age" value="120000" />
   </appSettings>
   <connectionStrings>
-    <add name="getdatabase" connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient"/>
+    <add name="getdatabase" connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--<connectionStrings>
     <add name="getdatabase"  connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock_prod;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
@@ -27,8 +27,8 @@
   <system.web>
     <webServices>
       <protocols>
-        <add name="HttpGet"/>
-        <add name="HttpPost"/>
+        <add name="HttpGet" />
+        <add name="HttpPost" />
       </protocols>
     </webServices>
     <!--<compilation debug="true" targetFramework="4.5.2">
@@ -38,60 +38,66 @@
     <add assembly="CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/><add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
     </assemblies>
     </compilation>-->
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2" />
     <httpModules>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <!--<customErrors mode="Off"/>-->
     <httpHandlers>
-      <add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
+      <add path="CrystalImageHandler.aspx" verb="GET" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
     </httpHandlers>
-    <compilation debug="true"/>
+    <compilation debug="true">
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
+    </compilation>
   </system.web>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*"/>
-        <add name="Access-Control-Allow-Headers" value="Content-Type"/>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
       </customHeaders>
     </httpProtocol>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <modules>
-      <remove name="ApplicationInsightsWebTracking"/>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler"/>
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <handlers>
-      <add name="CrystalImageHandler.aspx_GET" verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" preCondition="integratedMode"/>
+      <add name="CrystalImageHandler.aspx_GET" verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" preCondition="integratedMode" />
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
   </system.webServer>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="OrderDeliveryServiceSoap"/>
-        <binding name="DispatchingDeliveryServiceSoap"/>
+        <binding name="OrderDeliveryServiceSoap" />
+        <binding name="DispatchingDeliveryServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
-          <textMessageEncoding messageVersion="Soap12"/>
-          <httpTransport/>
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
         </binding>
         <binding name="DispatchingDeliveryServiceSoap12">
-          <textMessageEncoding messageVersion="Soap12"/>
-          <httpTransport/>
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
         </binding>
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx" binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap" contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap"/>
-      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx" binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12" contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12"/>
-      <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx" binding="basicHttpBinding" bindingConfiguration="DispatchingDeliveryServiceSoap" contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap"/>
-      <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx" binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12" contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12"/>
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx" binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap" contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx" binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12" contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx" binding="basicHttpBinding" bindingConfiguration="DispatchingDeliveryServiceSoap" contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx" binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12" contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12" />
     </client>
     <!--<client>
     <endpoint address="http://112.209.172.28/qualitycontrol/WebService/OrderDeliveryService.asmx"
