--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -88,6 +88,7 @@
         <binding name="OrderDeliveryServiceSoap" />
         <binding name="DispatchingDeliveryServiceSoap" />
         <binding name="ManageItemServiceSoap" />
+        <binding name="ManageSupplierServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -99,6 +100,10 @@
           <httpTransport />
         </binding>
         <binding name="ManageItemServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="ManageSupplierServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -123,6 +128,12 @@
       <endpoint address="http://localhost:2908/superadmin/WebService/ManageItemService.asmx"
         binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
         contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
+      <endpoint address="http://localhost:2908/superadmin/WebService/ManageSupplierService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap" />
+      <endpoint address="http://localhost:2908/superadmin/WebService/ManageSupplierService.asmx"
+        binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
+        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
     </client>
     <!--<client>
     <endpoint address="http://112.209.172.28/qualitycontrol/WebService/OrderDeliveryService.asmx"
