Fix Morris Js Error

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -11,19 +11,16 @@
   </appSettings>
   <connectionStrings>
     <add name="getdatabase" connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />
+
+    <!--<add name="getdatabase"  connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock_prod;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient" />-->
+
+    <!--<add name ="getdatabase" connectionString ="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
+         providerName="System.Data.SqlClient" />-->
+
+    <!--<add name="getdatabase" connectionString="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;" 
+    providerName="System.Data.SqlClient"/>-->
+    <!--<add name="getdatabase" connectionString="Data Source=PEMAUSTRIA;Initial Catalog=stock_prod;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
-  <!--<connectionStrings>
-    <add name="getdatabase"  connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock_prod;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
-  <!--<connectionStrings>
-    <add name ="getdatabase" connectionString ="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
-  <!--<connectionStrings>
-    <add name="getdatabase" connectionString="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;" 
-    providerName="System.Data.SqlClient"/>
-  </connectionStrings>-->
   <system.web>
     <webServices>
       <protocols>
