Admin,production,warehouse and refix dispatch and receive

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -21,7 +21,7 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name="getdatabase" connectionString="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;" 
+    <add name="getdatabase" connectionString="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;"
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
@@ -60,8 +60,8 @@
     </pages></system.web>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <!--<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />-->
     </compilers>
   </system.codedom>
   <system.webServer>
@@ -87,8 +87,9 @@
       <basicHttpBinding>
         <binding name="OrderDeliveryServiceSoap" />
         <binding name="DispatchingDeliveryServiceSoap" />
-        <binding name="ManageItemServiceSoap" />
-        <binding name="ManageSupplierServiceSoap" />
+        <binding name="OnHoldServiceSoap" />
+        <binding name="RawMaterialsServiceSoap" />
+        <binding name="ProdRawSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -99,11 +100,15 @@
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-        <binding name="ManageItemServiceSoap12">
+        <binding name="OnHoldServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
-        <binding name="ManageSupplierServiceSoap12">
+        <binding name="RawMaterialsServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="ProdRawSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -122,18 +127,24 @@
       <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
         binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
         contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12" />
-      <endpoint address="http://localhost:2908/superadmin/WebService/ManageItemService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
-        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
-      <endpoint address="http://localhost:2908/superadmin/WebService/ManageItemService.asmx"
-        binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
-        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
-      <endpoint address="http://localhost:2908/superadmin/WebService/ManageSupplierService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
-        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap" />
-      <endpoint address="http://localhost:2908/superadmin/WebService/ManageSupplierService.asmx"
-        binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
-        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
+        contract="OnholdService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OnHoldService.asmx"
+        binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
+        contract="OnholdService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
+      <endpoint address="http://localhost:2908/warehouse/WebService/RawMaterialsService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="RawMaterialsServiceSoap"
+        contract="RawMaterialService.RawMaterialsServiceSoap" name="RawMaterialsServiceSoap" />
+      <endpoint address="http://localhost:2908/warehouse/WebService/RawMaterialsService.asmx"
+        binding="customBinding" bindingConfiguration="RawMaterialsServiceSoap12"
+        contract="RawMaterialService.RawMaterialsServiceSoap" name="RawMaterialsServiceSoap12" />
+      <endpoint address="http://localhost:2908/production/WebService/ProdRaw.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
+        contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
+      <endpoint address="http://localhost:2908/production/WebService/ProdRaw.asmx"
+        binding="customBinding" bindingConfiguration="ProdRawSoap12"
+        contract="ProductRawService.ProdRawSoap" name="ProdRawSoap12" />
     </client>
     <!--<client>
     <endpoint address="http://112.209.172.28/qualitycontrol/WebService/OrderDeliveryService.asmx"
